# pybayescointur

./: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
docs/: build_notebook.py  build_site.py  generate_assets.py  index.html
docs/notebook/: index.html
docs/tables/: m1_por.csv  m1_por.html  m2_break.csv  m2_break.html  m3_corr.csv  m3_corr.html  m3_models.csv  m3_models.html  m4_rank.csv  m4_rank.html
examples/: 01_panel_unit_root_por.py  02_structural_break.py  03_cross_sectional_dependence.py  04_panel_cointegration.py
notebooks/: pybayescointur_tutorial.ipynb
pybayescointur/: __init__.py  cointegration.py  cross_section.py  datasets.py  por_panel.py  structural_break.py  tables.py  utils.py  viz.py
tests/: test_pybayescointur.py
