[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybayescointur"
version = "0.1.0"
description = "Bayesian unit-root and cointegration tests for panel data, with publication-quality tables and visualisations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com" },
]
maintainers = [
    { name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com" },
]
keywords = [
    "bayesian",
    "panel data",
    "unit root",
    "cointegration",
    "posterior odds ratio",
    "structural break",
    "cross-sectional dependence",
    "econometrics",
    "VECM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
viz = ["plotly>=5.0"]
pretty = ["rich>=12.0"]
all = ["plotly>=5.0", "rich>=12.0"]
dev = ["pytest>=7.0", "plotly>=5.0", "rich>=12.0"]

[project.urls]
Homepage = "https://github.com/merwanroudane/pybayescointur"
Repository = "https://github.com/merwanroudane/pybayescointur"
Issues = "https://github.com/merwanroudane/pybayescointur/issues"

[tool.setuptools]
packages = ["pybayescointur"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
